# rocket-examples

./: README.md
bookstore/: Cargo.toml
bookstore/src/: main.rs
bookstore/src/auth/: mod.rs
bookstore/src/controllers/: auth.rs  books.rs  mod.rs
bookstore/src/db/: mod.rs
bookstore/src/entities/: author.rs  book.rs  mod.rs  prelude.rs  user.rs
bookstore/src/fairings/: cors.rs
bookstore/src/migrator/: m20220101_000001_create_user_table.rs  m20250221_054922_create_author_table.rs  m20250221_060151_create_book_table.rs  mod.rs
hello_rocket/src/: main.rs
hello_rocket_async/: Cargo.toml
hello_rocket_async/src/: main.rs
route_implementation/: Cargo.toml
route_implementation/src/: main.rs
