[package]
name = "bookstore"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.17.0"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
rocket = { version = "0.5.1", features = ["json"] }
sea-orm = { version = "1.1.5", features = ["sqlx-postgres", "runtime-async-std-native-tls", "macros"] }
sea-orm-migration = "1.1.5"
